--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "@sanity/cli": "^1.150.1",
     "lerna": "^3.13.1"
+  },
+  "dependencies": {
+    "sanity": "^1.150.1"
   }
 }
