--- a/studio/package.json
+++ b/studio/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^16.13.1",
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.11",
-    "sanity-plugin-dashboard-widget-netlify": "^1.0.1"
+    "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
+    "sanity-plugin-position-input": "^1.0.4"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
