--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,8 @@
     "react-helmet": "^5.2.1"
   },
   "dependencies": {
-    "gatsby-image": "^2.0.41"
+    "gatsby-image": "^2.0.41",
+    "react-p5": "^1.3.6",
+    "react-p5-wrapper": "^2.3.0"
   }
 }
