--- a/web/package.json
+++ b/web/package.json
@@ -37,7 +37,6 @@
   },
   "dependencies": {
     "gatsby-image": "^2.0.41",
-    "react-p5": "^1.3.6",
-    "react-p5-wrapper": "^2.3.0"
+    "react-p5": "^1.3.6"
   }
 }
