--- a/web/package.json
+++ b/web/package.json
@@ -36,7 +36,9 @@
     "react-helmet": "^5.2.1"
   },
   "dependencies": {
+    "@gen/react-use-p5": "^0.3.0",
     "gatsby-image": "^2.0.41",
+    "p5": "^1.1.9",
     "react-p5": "^1.3.6"
   }
 }
