--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "@gen/react-use-p5": "^0.3.0",
     "gatsby-image": "^2.0.41",
     "p5": "^1.1.9",
+    "p5-react-renderer": "^0.1.0",
     "react-p5": "^1.3.6"
   }
 }
