--- a/studio/package.json
+++ b/studio/package.json
@@ -23,6 +23,7 @@
     "@sanity/desk-tool": "^1.150",
     "@sanity/studio-hints": "^1.150",
     "date-fns": "^1.30.1",
+    "get-youtube-id": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
