--- a/web/package.json
+++ b/web/package.json
@@ -30,7 +30,7 @@
     "gatsby-source-sanity": "^4.0.3",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.6.0",
-    "prettier-eslint-cli": "^4.7.1",
+    "prettier-eslint-cli": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1"
@@ -38,6 +38,7 @@
   "dependencies": {
     "@gen/react-use-p5": "^0.3.0",
     "gatsby-image": "^2.0.41",
+    "get-youtube-id": "^1.0.1",
     "p5": "^1.1.9",
     "p5-react-renderer": "^0.1.0",
     "react-p5": "^1.3.6"
