--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "lerna": "^3.13.1"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
     "get-youtube-id": "^1.0.1",
+    "react-youtube": "^7.12.0",
     "sanity": "^1.150.1"
   }
 }
