--- a/studio/package.json
+++ b/studio/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@sanity/base": "^1.150",
+    "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/cli": "^1.150",
     "@sanity/components": "^1.150",
     "@sanity/core": "^1.150",
@@ -27,6 +28,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-youtube": "^7.12.0",
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.11",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
