--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,7 @@
     "get-youtube-id": "^1.0.1",
     "p5": "^1.1.9",
     "p5-react-renderer": "^0.1.0",
-    "react-p5": "^1.3.6"
+    "react-p5": "^1.3.6",
+    "react-youtube": "^7.12.0"
   }
 }
