--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@gen/react-use-p5": "^0.3.0",
+    "@types/youtube": "0.0.38",
     "gatsby-image": "^2.0.41",
     "get-youtube-id": "^1.0.1",
     "p5": "^1.1.9",
