--- a/web/package.json
+++ b/web/package.json
@@ -19,14 +19,14 @@
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.0",
-    "gatsby": "^2.24.73",
-    "gatsby-plugin-postcss": "^2.3.13",
-    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby": "^2.9.2",
+    "gatsby-plugin-postcss": "^2.0.7",
+    "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-source-sanity": "^4.0.3",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.6.0",
@@ -37,12 +37,9 @@
   },
   "dependencies": {
     "@gen/react-use-p5": "^0.3.0",
-    "@types/youtube": "0.0.38",
-    "gatsby-image": "^2.4.21",
-    "get-youtube-id": "^1.0.1",
+    "gatsby-image": "^2.0.41",
     "p5": "^1.1.9",
     "p5-react-renderer": "^0.1.0",
-    "react-p5": "^1.3.6",
-    "react-youtube": "^7.12.0"
+    "react-p5": "^1.3.6"
   }
 }
