--- a/studio/package.json
+++ b/studio/package.json
@@ -26,6 +26,7 @@
     "get-youtube-id": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-codepen-embed": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-youtube": "^7.9.0",
     "sanity-plugin-asset-source-unsplash": "^0.1.3",
